--- a/src/app/Components/rooms/rooms.component.html
+++ b/src/app/Components/rooms/rooms.component.html
@@ -1,7 +1,11 @@
-<h3> Choose A Date Range </h3>
-<input type="date" id="startDate" class="form-control col-3 m-2" [(ngModel)]="bookingInfo.StartDate" />
-<input type="date" id="endDate" class="form-control col-3 m-2" [(ngModel)]="bookingInfo.EndDate" />
-<button class="btn btn-primary" (click)="checkAvailableRooms()" > Check Available Rooms </button>
+<h2> Choose A Date Range </h2>
+<form #dateForm="ngForm" (ngSubmit)="checkAvailableRooms()" class="row col-12"  >
+<label id="startDate" >Start Date:</label>
+<input name="StartDate" required #startData="ngModel" [class.is-valid]="startData.valid && startData.touched" [class.is-invalid]="startData.invalid && startData.touched" type="date" id="startDate" class="form-control col-3 mr-1" [(ngModel)]="bookingInfo.StartDate" />
+<label id="endDate">End Date:</label>
+<input name="EndDate" required #endDate="ngModel" [class.is-valid]="endDate.valid && endDate.touched" [class.is-invalid]="endDate.invalid && endDate.touched"  type="date" id="endDate" class="form-control col-3 " [(ngModel)]="bookingInfo.EndDate" />
+<input class="btn btn-primary col-2 ml-2" type="submit" [disabled]="dateForm.invalid" value="Check Available Rooms" /> 
+</form>
 <div class="row col-12" style="justify-content: space-around;margin: 5px auto;">
     <div [ngClass]="{loadingClass:Loading}" ></div>
     <div [hidden]="this.availableRooms.length >=1" >
@@ -19,7 +23,7 @@
       Room Description: {{item.Description}}<br>
     </div>
     <div class="card-footer" style="text-align: center;">
-      <a class="btn btn-success"  [routerLink]="['']" >Reserve Room</a> 
+      <button class="btn btn-success"  (click)="ReserveRoom()" >Reserve Room</button> 
     </div>
   </div>
-  </div>
+</div>
