--- a/src/app/SharedComponents/footer/footer.component.html
+++ b/src/app/SharedComponents/footer/footer.component.html
@@ -3,7 +3,7 @@
 
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3">
-    © 2020 Copyright:<a href="#" style="color: white;text-decoration: none;"> E-Commerce.com</a>
+    © 2020 Copyright:<a href="#" style="color: white;text-decoration: none;"> HotelApp.com</a>
   </div>
   <!-- Copyright -->
 
